refactored list view sorting functionality, changed how I display specific view's elements. less javascreipt rendering.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -331,6 +331,10 @@ audio::-webkit-media-controls-timeline {
     border-bottom: 2px solid black;
 }
 
+.list-reverse::after {
+    content: ":)";
+}
+
 
 /* toggle show view and utilities */
 .menu-flex {
