--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -250,11 +250,11 @@ audio::-webkit-media-controls-timeline {
 
 .info-container > h3 {
     font-family: serif;
-    margin: 5px;
+    margin: 5px 10px;
 }
 
 .info-container > p {
-    font-size: small;
+    font-size: 10px;;
     font-style: italic;
 
 }
@@ -271,7 +271,7 @@ audio::-webkit-media-controls-timeline {
     margin-bottom: 10px;
     border: none;
     background-color: inherit;
-    font-family: monospace;
+    font-family: sans-serif;
     color: rgb(70, 70, 70);
     letter-spacing: -2px;
 }
@@ -336,6 +336,37 @@ audio::-webkit-media-controls-timeline {
 }
 
 
+/*  */
+/* Queue modal */
+/*  */
+#qPrompt {
+    display: none; 
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-cont {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; 
+    display: flex;
+}
+
+#modalSong {
+    white-space: nowrap;
+}
+
+
+
 /* toggle show view and utilities */
 .menu-flex {
     display: flex;
@@ -369,7 +400,7 @@ audio::-webkit-media-controls-timeline {
         width: 70px;
     }
     .info-container > h3 {
-        margin-right: 25px;
+        margin: 5px;
     }
     .glyphicon {
         font-size: 20px;
@@ -391,13 +422,14 @@ audio::-webkit-media-controls-timeline {
         font-style: italic;
     }
     .info-container > p {
-        font-size: 1.5vmax;
+        /* font-size: 1.5vmax; */
         font-style: normal;
     }
     .info-container > h2 {
         font-size: 3vmax;
         writing-mode: vertical-rl;
-        margin-top: 0;
+        margin: 5px;
+        padding-top: 5px;
     }
 }
 
@@ -406,6 +438,7 @@ audio::-webkit-media-controls-timeline {
         font-size: 2vmax;
         font-style: italic;
         writing-mode: vertical-rl;
+        
     }
     .controlBtns > button {
         height: 45px;
@@ -415,7 +448,8 @@ audio::-webkit-media-controls-timeline {
 
 @media screen and (max-width: 450px) {
     .info-container > p {
-        font-size: 1vmax;
+        font-size: 8px;
+        margin: 10px;
         writing-mode: vertical-rl;
     }
     
