--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,7 +4,7 @@ html {
     background-image: url(https://forestw70.github.io/sketches-bcc-client/assets/images/s&ofv1.jpg);
     background-position: right;
     background-repeat: round;
-    background-size: contain;
+    background-size: auto;
 }
 
 #wellHeyThere {
@@ -452,8 +452,9 @@ audio::-webkit-media-controls-timeline {
         content: ""
     }
     
-    #list .song-list-row {
+    #list {
         width: 1000px;
+        overflow: hidden;
         overflow-x: scroll;
     }
 }
