major changes to sort functionality and queue modal box

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -329,6 +329,10 @@ audio::-webkit-media-controls-timeline {
     
 }
 
+.list-reverse {
+    font-style: italic;
+}
+
 .song-list-row {
     display: grid;
     width: 100%;
